sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:15: error: ';' expected but integer literal found.
      while(getCouleur(l)!=BLEU)&& l>=0){
                                      ^